// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Email renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 kmJrCM"
        disabled={true}
        placeholder=" "
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 kEcuMH"
        disabled={true}
        placeholder=" "
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 dNBrob"
      >
        <input
          className="Input-qkdgvx-0 iZDlhq"
          disabled={true}
          placeholder=" "
          type="email"
          value="jake.weary@sportsbet.io"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 jqgyeC"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 kFyqxN"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 dNBrob"
      >
        <input
          className="Input-qkdgvx-0 iutDug"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 kmJrCM"
        placeholder=" "
        readOnly={true}
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 kEcuMH"
        placeholder=" "
        readOnly={true}
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 dNBrob"
      >
        <input
          className="Input-qkdgvx-0 iZDlhq"
          placeholder=" "
          readOnly={true}
          type="email"
          value="jake.weary@sportsbet.io"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 kmJrCM"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 kEcuMH"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 dNBrob"
      >
        <input
          className="Input-qkdgvx-0 iZDlhq"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 kmJrCM"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 kEcuMH"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 dNBrob"
      >
        <input
          className="Input-qkdgvx-0 iZDlhq"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <input
        className="Input-qkdgvx-0 kmJrCM"
        placeholder="medium"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <input
        className="Input-qkdgvx-0 kEcuMH"
        placeholder="large"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 dNBrob"
      >
        <input
          className="Input-qkdgvx-0 ebrbCv"
          placeholder="xlarge"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 jbvxbF"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 dRqmhq"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 ihGsfO"
      >
        <input
          className="Input-qkdgvx-0 iZDlhq"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
